--- a/configuration/environment/dev.yml
+++ b/configuration/environment/dev.yml
@@ -18,9 +18,7 @@ parameters:
     github.app.id: ''
     github.app.secret: ''
 
-    logger.core.url: 'http://qlsonictest:2581/web/core/logentries'
-
-    redis.server: 'test.example.com:6379'
+    redis.server: 'localhost:6379'
     redis.prefix: 'hal9000dev'
 
     ############################################################################
