--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "ext-xmlwriter": "*",
         "doctrine/orm": "~2.5.6",
         "guzzlehttp/guzzle": "5.*",
+        "guzzlehttp/psr7": "~1.3",
         "php-http/guzzle5-adapter": "~1.0.0",
         "knplabs/github-api": "~2.0.1",
         "cache/predis-adapter": "~0.4.2",
