--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,6 @@
         "ql/hal-core":          "2.10.0",
 
         "ql/mcp-cache":         "3.0.0",
-        "ql/mcp-corp-account":  "~1.0",
 
         "ql/mcp-common":        "~1.0",
         "ql/mcp-panthor":       "~2.4.0",
@@ -49,6 +48,7 @@
         "symfony/yaml":                 "~2.8",
         "symfony/options-resolver":     "~3.2",
         "symfony/proxy-manager-bridge": "~2.8",
+        "symfony/ldap":                 "~3.2",
 
         "twig/twig": "~2.0"
     },
