--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "psr-4": { "QL\\Hal\\": "src" }
     },
     "require": {
-        "php-64bit": "~5.6 || ~7.0",
+        "php-64bit": "~7.0",
 
         "ext-curl": "*",
         "ext-ldap": "*",
@@ -22,9 +22,9 @@
         "ext-pdo_sqlite": "*",
         "ext-xmlwriter": "*",
         "doctrine/orm": "~2.5.6",
-        "guzzlehttp/guzzle": "5.*",
         "guzzlehttp/psr7": "~1.3",
-        "php-http/guzzle5-adapter": "~1.0.0",
+        "guzzlehttp/guzzle": "6.*",
+        "php-http/guzzle6-adapter": "~1.1.0",
         "knplabs/github-api": "~2.0.1",
         "cache/predis-adapter": "~0.4.2",
         "paragonie/random_compat": "~1.1",
