--- a/configuration/config.yml
+++ b/configuration/config.yml
@@ -1,10 +1,11 @@
 imports:
-    - resource: ../vendor/ql/hal-core/configuration/hal-core.yml
-    - resource: ../vendor/ql/mcp-panthor/configuration/panthor.yml
-    - resource: di.yml
-    - resource: config.global.yml
-    - resource: config.env.yml
-    - resource: routes.yml
+    - resource: '../vendor/ql/hal-core/configuration/hal-core.yml'
+    - resource: '../vendor/ql/mcp-logger/configuration/mcp-logger.yml'
+    - resource: '../vendor/ql/mcp-panthor/configuration/panthor.yml'
+    - resource: 'di.yml'
+    - resource: 'config.global.yml'
+    - resource: 'config.env.yml'
+    - resource: 'routes.yml'
 
 parameters:
     # environment independent parameters
