Add environment to logger properties

--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -38,6 +38,7 @@ parameters:
         file: '../.error.log'
     mcp.logger.default_properties:
         applicationID: '%application.id%'
+        serverEnvironment: '%application.environment%'
 
     ############################################################################
     # doctrine
